--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ li {
 
 .glheader {
   height: 100px;
-  background-color: red;
+  background-color: #3D7680;
   margin-bottom: 20px;
   display: table;
 }
